--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
   <div>
-    <img src="https://zendemo.github.io/person.jpeg" />
+    <img src="https://zencwk.github.io/Screen%20Shot%202021-07-07%20at%203.54.41%20PM.png" />
     <h1>Kevin Sloan</h1>
     <a href="https://linkedin.com/in/sloankev">LinkedIn</a>
     <a href="https://github.com/ksloan">GitHub</a>
